[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Home.gd" type="Script" id=1]
[ext_resource path="res://scripts/Bed.gd" type="Script" id=2]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/DialogueUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/CookingUI.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2(32, 16)

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2(16, 32)

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2(24, 16)

[node name="Home" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 960
margin_bottom = 540
color = Color(0.878431, 0.878431, 0.878431, 1)

[node name="Walls" type="StaticBody2D" parent="."]

[node name="WallTop" type="CollisionShape2D" parent="Walls"]
position = Vector2(480, 0)
shape = SubResource( 1 )

[node name="WallBottom" type="CollisionShape2D" parent="Walls"]
position = Vector2(480, 540)
shape = SubResource( 1 )

[node name="WallLeft" type="CollisionShape2D" parent="Walls"]
position = Vector2(0, 270)
shape = SubResource( 1 )

[node name="WallRight" type="CollisionShape2D" parent="Walls"]
position = Vector2(960, 270)
shape = SubResource( 1 )

[node name="Bed" type="Area2D" parent="."]
position = Vector2(100, 100)
script = ExtResource( 2 )

[node name="Sprite" type="ColorRect" parent="Bed"]
margin_right = 64
margin_bottom = 32
color = Color(0.4, 0.6, 1.0, 1.0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bed"]
position = Vector2(32, 16)
shape = SubResource( 1 )

[node name="HintLabel" type="Label" parent="Bed"]
margin_left = -32
margin_top = -24
margin_right = 96
margin_bottom = -8
text = "Press SPACE to sleep"
align = 1

[node name="Storage" type="Area2D" parent="."]
position = Vector2(200, 100)

[node name="Sprite" type="ColorRect" parent="Storage"]
margin_right = 32
margin_bottom = 32
color = Color(0.6, 0.4, 0.2, 1.0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Storage"]
position = Vector2(16, 16)
shape = SubResource( 2 )

[node name="HintLabel" type="Label" parent="Storage"]
margin_left = -32
margin_top = -24
margin_right = 64
margin_bottom = -8
text = "Press SPACE to open"
align = 1

[node name="Door" type="Area2D" parent="."]
position = Vector2(480, 540)

[node name="Sprite" type="ColorRect" parent="Door"]
margin_right = 32
margin_bottom = 64
color = Color(0.4, 0.2, 0.0, 1.0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]
position = Vector2(16, 32)
shape = SubResource( 3 )

[node name="HintLabel" type="Label" parent="Door"]
margin_left = -32
margin_top = -24
margin_right = 64
margin_bottom = -8
text = "Press SPACE to exit"
align = 1

[node name="CookingStation" type="Area2D" parent="."]
position = Vector2(300, 100)

[node name="Sprite" type="ColorRect" parent="CookingStation"]
margin_right = 48
margin_bottom = 32
color = Color(0.8, 0.4, 0.0, 1.0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CookingStation"]
position = Vector2(24, 16)
shape = SubResource( 4 )

[node name="HintLabel" type="Label" parent="CookingStation"]
margin_left = -32
margin_top = -24
margin_right = 80
margin_bottom = -8
text = "Press SPACE to cook"
align = 1

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2(480, 480)

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2(0.5, 0.5)
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DialogueUI" parent="CanvasLayer" instance=ExtResource( 4 )]

[node name="CookingUI" parent="CanvasLayer" instance=ExtResource( 5 )]
visible = false